# ParallelTSP

./: .astylerc  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Projekt Doku.docx  README.md  hostfile.txt  run_tsp.sh  solved.json  start_tsp.sh
doc/: Buildsystem.md  CodeStyle  CodeStyle.md  GeneticAlgorithm.md  Links.md  Recherche MPI.txt  Technologies.md  Visualisation.md
doc/ausarbeitung/: AvS_Paralleles_TSP.tex  Makefile  abstract.tex  cover.tex  literature.bib
doc/protokoll/: 2016_04_12.md  2016_04_12_Projektdoku.md  2016_04_19.md  2016_04_19_Projektkontext.md  2016_05_10.md  2016_05_24.md  2016_05_25.md  2016_05_31.md  2016_06_21.md
graph/: 1000nodes.json  200nodes.json  500nodes.json  MediumGraph.json  SampleCfg.json  SampleGraph.json  SamplePath.json  TestGraph.json  cfg.json
graph/100nodes/: 100nodes.json
graph/sample_data/: 01_Proc_01_Machines_001.json  01_Proc_01_Machines_002.json  01_Proc_01_Machines_003.json  01_Proc_01_Machines_004.json  01_Proc_01_Machines_005.json  01_Proc_01_Machines_006.json  01_Proc_01_Machines_007.json  01_Proc_01_Machines_008.json  01_Proc_01_Machines_009.json  01_Proc_01_Machines_010.json  08_Proc_01_Machines_001.json  08_Proc_01_Machines_002.json  08_Proc_01_Machines_003.json  08_Proc_01_Machines_004.json  08_Proc_01_Machines_005.json  08_Proc_01_Machines_006.json  08_Proc_01_Machines_007.json  08_Proc_01_Machines_008.json  08_Proc_01_Machines_009.json  08_Proc_01_Machines_010.json
script/: copy_repo.sh  get-boost-mpi.sh  get-boost.sh  get-catch.sh  get-linux-deps.sh  get-open-mpi.sh  get-ubuntu-deps.sh
src/: CMakeLists.txt
src/GraphImageCreater/: GraphImageCreater.sln
src/GraphImageCreator/: GraphImageCreator.sln
src/converter/: CMakeLists.txt  GraphConverter.cpp  GraphConverter.hpp  main.cpp
src/data/: Config.hpp  ConfigSerializer.cpp  Edge.hpp  (+13 more)
src/simplega/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  TestFitnessUpdater.cpp  TestGraphGenerator.cpp  TestGraphSerializer.cpp  TestPathSerializer.cpp  TestPathVerifier.cpp  TestRandomPopulationGenerator.cpp
(+61 files in other folders)
